:boom: update styles

--- a/docs/.vuepress/override.styl
+++ b/docs/.vuepress/override.styl
@@ -4,3 +4,8 @@
     color: #fff;
     background-color: black;
 }
+
+$accentColor = #075FDA
+$textColor = #2c3e50
+$borderColor = #eaecef
+$codeBgColor = #282c34
